--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
+.main-header {
+  background-color: #eeeeee;
+}
+
 body {
   margin: 0;
+  padding: 0;
 
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 700;
-  color: #000000;
-  text-transform: uppercase;
+  font-weight: 400;
+  color: #283136;
   background-color: #ffffff;
-  background-position: top center;
-  background-repeat: no-repeat;
 }
 
 a {
@@ -17,42 +19,44 @@ a {
 }
 
 .main-navigation {
+  font-weight: 500;
   font-size: 16px;
-  line-height: 30px;
   color: #000000;
-  background-color: #eeeeee;
 }
 .site-navigation {
   list-style: none;
 }
-
 .site-navigation a {
   color: #000000;
 }
-
-.site-navigation a:hover,
-.site-navigation a:focus {
-  background-color: #dfdfdf;
+.main-navigation a {
+  color: #000000;
+}
+.main-navigation a:hover{
+  color: #fb565a;
+}
+.main-navigation a:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .features-list {
   list-style: none;
 }
 
-.index-columns {
-  color: #000000;
-  text-align: left;
-  background-color: #ffffff;
-  background-repeat;
-}
-
-.index-columns h3 {
+.features h3 {
+  font-weight: 700;
   font-size: 24px;
   line-height: 30px;
+  color: #000000;
+}
+.features-item p {
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .button {
   font: inherit;
+  line-height: 18px;
   text-align: center;
   color: #ffffff;
   vertical-align: middle;
@@ -60,76 +64,35 @@ a {
   background-color: #fb565a;
   border: none;
 }
-.button--red {
-  text-align: center;
-  color: #ffffff;
-  vertical-align: middle;
-  text-transform: uppercase;
-  background-color: #fb565a;
-  border: none;
-}
-.button--red:hover,
-.button--red:focus {
+.button:hover {
   background-color: #e74246;
 }
-}
-.button--red:active {
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+
   background-color: #d7373b;
+  box-shadow: inset 0 3px 0 0 rgba(0, 1, 1, 0.1);
+}
+.button-2 {
+  background-color: #00ca74;
 }
 
-.button--green {
-  text-align: center;
-  color: #ffffff;
-  vertical-align: middle;
-  text-transform: uppercase;
-  background-color: #00ca74;
-  border: none;
-}
-.button--green:hover,
-.button--green:focus {
+.button-2:hover {
   background-color: #00bc6c;
 }
-}
-.button--green:active {
-  background-color: #00aa62;
-}
-.button--yellow {
-  text-align: center;
-  color: #ffffff;
-  vertical-align: middle;
-  text-transform: uppercase;
+
+.button-3 {
   background-color: #efc84a;
-  border: none;
 }
-.button--yellow:hover,
-.button--yellow:focus {
+
+.button-3:hover {
   background-color: #eab534;
-}
-}
-.button--yellow:active {
-  background-color: #e5a722;
-}
-.filter-button-button {
-  text-align: center;
-  color: #000000;
-  vertical-align: middle;
-  text-transform: uppercase;
-  background-color: #eeeeee;
-  border: none;
-}
-.filter-button-button:hover,
-.filter-button-button:focus {
-  background-color: #dfdfdf;
-}
-.filter-button-button:active {
-  background-color: #d5d5d5;
 }
 .contacts {
   display: none;
 }
-.catalog-item {
-  list-style: none;
-}
+
 .social-list {
   list-style: none;
 }
@@ -139,9 +102,86 @@ a {
   background-position: 0 0;
   background-repeat: repeat;
 }
+.footer-bold {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 36px;
+  color: black;
+}
+.footer-sale {
+  line-height: 22px;
+  color: #444444;
+}
 .footer-social ul {
   list-style: none;
 }
 .social-button {
   color: #e1e1e1;
+}
+.footer-sale,
+.footer-friendship {
+  text-align: center;
+}
+
+.page-title {
+  font-weight: 500;
+  font-size: 55px;
+  line-height: 55px;
+  text-align: center;
+  color: black;
+}
+.filter fieldset {
+  border: none;
+}
+.filter legend {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: left;
+  color: #000000;
+}
+.filter ul {
+  list-style: none;
+  line-height: 20px;
+  color: #283136;
+}
+.filter-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+
+  background-color: #eeeeee;
+}
+
+.filter-button:hover {
+  background-color: #dfdfdf;
+}
+
+.filter-button:active {
+  color: rgba(0, 0, 0, 0.3);
+
+  background-color: #d5d5d5;
+  box-shadow: inset 0 3px 0 0 rgba(0, 1, 1, 0.1);
+}
+
+.catalog-item {
+  list-style: none;
+}
+.catalog-list-window {
+  text-align: center;
+
+  background-color: #eeeeee;
+}
+
+.catalog-list-window p {
+  line-height: 18px;
+  color: #666666;
+}
+
+.catalog-list-window h4 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  color: black;
 }
