--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .main-navigation {
   font-weight: 500;
   font-size: 16px;
@@ -175,7 +180,7 @@ a {
 }
 .catalog-list-window {
   text-align: center;
-
+  width: 360px;
   background-color: #eeeeee;
 }
 
@@ -237,6 +242,23 @@ body {
 .basket{
   margin: 0;
   padding: 0;
+  padding-left: 41px;
+  position: relative;
+
+}
+.basket::before {
+  content:"";
+  position:absolute;
+  top: 7px;
+  left: 1px;
+
+  width: 15px;
+  height: 15px;
+
+  background-image: url("img/basket-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-color: #a6a6a6;
 }
 .features {
   margin-bottom: 160px;
@@ -276,14 +298,13 @@ body {
   width: 760px;
   }
 .catalog-item {
-  width: 360px;
-  margin-right: 40px;
   margin-bottom: 33px;
 
 }
 .catalog-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin: 0;
   margin-bottom: 60px;
   padding: 0;
