--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,10 @@ input[type="radio"].visually-hidden {
 
   background-color: #eeeeee;
 }
-
+.slider-container{
+  margin-left: 140px;
+  margin-right: 141px;
+}
 .slider-controls {
   position: absolute;
   left: 50%;
@@ -337,7 +340,7 @@ input[type="radio"].visually-hidden {
 
 .about-us h3 {
   margin: 0;
-  margin-bottom: 21px;
+  margin-bottom: 23px;
   line-height: 24px;
   color: #000000;
 }
@@ -346,27 +349,30 @@ input[type="radio"].visually-hidden {
 }
 .about-us-description-list{
   margin: 0;
+  padding: 0;
+
   list-style-type: none;
 }
-.about-us-description-list li::before{
-  content: "";
-  position:absolute;
-  
 
-  width: 16px;
-  height: 18px;
 
-  background-color: #ff0000;
-
-}
 .about-us-description-list li {
-  margin-bottom: 21px;
+  margin-bottom: 23px;
   line-height: 24px;
   text-transform: none;
   color: #283136;
 
 }
 
+.about-us-description-list li::before{
+  content: "";
+  display: inline-block;
+  width: 25px;
+
+  border-top: 2px solid red;
+  padding-top: 5px;
+  margin-right: 15px;
+
+}
 .description-text {
   width: 650px;
 }
@@ -449,10 +455,20 @@ input[type="radio"].visually-hidden {
 .clients img:active {
   opacity: 0.1;
 }
+.location{
+  margin-top: 80px;
+  margin-bottom: 78px;
+}
+.map-marker{
+  position: absolute;
+  width: 231px;
+  bottom: -1475px;
+  left: 820px;
+}
 .address {
   position: absolute;
   left: 140px;
-
+  bottom: -1560px;
   width: 319px;
   padding-top: 54px;
   padding-bottom: 47px;
@@ -491,6 +507,7 @@ input[type="radio"].visually-hidden {
   margin-right: auto;
   margin-left: auto;
 }
+
 .contacts {
   width: 960px;
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
@@ -510,8 +527,9 @@ input[type="radio"].visually-hidden {
   font-size: 45px;
   line-height: 45px;
   color: #000000;
-
-
+}
+.contacts{
+  display: none;
 }
 .contacts-form{
   width: 760px;
@@ -598,6 +616,12 @@ input[type="radio"].visually-hidden {
 .footer-social {
   margin-left: 139px
 }
+
+.footer-friendship {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 12px;
+}
 .footer-bold {
   font-weight: 500;
   font-size: 36px;
@@ -605,6 +629,9 @@ input[type="radio"].visually-hidden {
   color: black;
 }
 .footer-sale {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 76px;
   line-height: 22px;
   color: #444444;
 }
@@ -629,10 +656,7 @@ input[type="radio"].visually-hidden {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d7373b;
 }
-.footer-sale,
-.footer-friendship {
-  text-align: center;
-}
+
 
 .page-title {
   margin-top: 0;
