--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,15 @@ input[type="radio"].visually-hidden {
   padding-top: 50px;
   background-color: #eeeeee;
 }
+.main-header-logo{
+  opacity: 1;
+}
+.main-header-logo:hover{
+  opacity: 0.8;
+}
+.main-header-logo:active{
+  opacity: 0.3;
+}
 .container {
   display: block;
   width: 1160px;
@@ -59,7 +68,6 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   line-height: 1.9;
   text-transform: uppercase;
-  font-weight: 500;
   font-size: 16px;
   color: #000000;
 }
@@ -78,6 +86,9 @@ input[type="radio"].visually-hidden {
 .site-navigation a {
   color: #000000;
 }
+.site-navigation li{
+  padding-right: 47px;
+}
 .main-navigation a {
   color: #000000;
 }
@@ -90,7 +101,14 @@ input[type="radio"].visually-hidden {
 .main-header-logo {
   margin-right: 200px;
 }
+.site-navigation .current-page::after,
+.site-navigation .current-page:hover::after,
+.site-navigation .current-page:active::after {
+  display: block;
+  content: "";
 
+  border-bottom: 3px solid #fb565a;
+}
 .basket{
   margin: 0;
   padding: 0;
@@ -110,7 +128,7 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/basket-icon.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-
+  color: #a6a6a6;
 }
 
 .slider {
@@ -118,10 +136,7 @@ input[type="radio"].visually-hidden {
 
   background-color: #eeeeee;
 }
-.slider-container{
-  margin-left: 140px;
-  margin-right: 141px;
-}
+
 .slider-controls {
   position: absolute;
   left: 50%;
@@ -138,7 +153,7 @@ input[type="radio"].visually-hidden {
 
 .slider-controls label {
   position: relative;
-
+  vertical-align: inherit;
   display: inline-block;
   width: 18px;
   height: 18px;
@@ -230,6 +245,7 @@ input[type="radio"].visually-hidden {
   font-size: 55px;
   line-height: 55px;
   font-weight: 500;
+  color: #000000
 }
 
 .slider-item p {
@@ -241,7 +257,11 @@ input[type="radio"].visually-hidden {
 
 .features-item {
   width: 300px;
-  padding-top: 80px;
+  margin-top: 80px;
+  padding-right: 100px;
+}
+.features-item:last-child {
+  padding: 0;
 }
 .features-list {
   list-style: none;
@@ -270,7 +290,8 @@ input[type="radio"].visually-hidden {
 .button {
   display: inline-block;
   padding: 19px 39px;
-  font: inherit;
+  font-weight: 500;
+  font-size: 16px;
   line-height: 18px;
   text-align: center;
   color: #ffffff;
@@ -317,6 +338,7 @@ input[type="radio"].visually-hidden {
   margin: 0;
   margin-top: 80px;
   margin-bottom: 35px;
+  font-weight: 500;
   font-size: 45px;
   line-height: 45px;
   text-transform: none;
@@ -336,11 +358,15 @@ input[type="radio"].visually-hidden {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 80px;
+  border-top: 2px solid #eeeeee;
+  border-bottom: 2px solid #eeeeee;
 }
 
 .about-us h3 {
   margin: 0;
   margin-bottom: 23px;
+  font-size: 16px;
   line-height: 24px;
   color: #000000;
 }
@@ -350,7 +376,7 @@ input[type="radio"].visually-hidden {
 .about-us-description-list{
   margin: 0;
   padding: 0;
-
+  margin-bottom: 76px;
   list-style-type: none;
 }
 
@@ -365,6 +391,7 @@ input[type="radio"].visually-hidden {
 
 .about-us-description-list li::before{
   content: "";
+  vertical-align: inherit;
   display: inline-block;
   width: 25px;
 
@@ -430,14 +457,13 @@ input[type="radio"].visually-hidden {
 .clients {
   display: flex;
   justify-content: space-between;
-  margin-top: 46px;
-  margin-bottom: 44px;
   padding: 0;
-}
-.vertical-line{
-  height: 55px;
-  width: 2px;
-  background-color: #e1e1e1;
+  margin: 0;
+  margin-top: 46px;
+  margin-bottom: 80px;
+  padding-bottom: 42px;
+
+  border-bottom: 2px solid #eeeeee;
 }
 
 .clients li {
@@ -457,15 +483,10 @@ input[type="radio"].visually-hidden {
 }
 .location{
   position: relative;
-  margin-top: 80px;
   margin-bottom: 78px;
 }
-.map-marker{
-  position: absolute;
-  width: 231px;
-  bottom: 135px;
-  left: 820px;
-}
+
+
 .address {
   position: absolute;
   left: 140px;
@@ -482,15 +503,19 @@ input[type="radio"].visually-hidden {
 .address h3{
   margin: 0;
   margin-bottom: 32px;
+  line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  color: #000000;
 }
 .address-info {
   margin: 0;
   margin-bottom: 17px;
+  font-size: 16px;
   line-height: 18px;
   text-transform: none;
   color: #666666;
+  text-align: center;
 }
 .tel {
   margin: 0;
@@ -510,6 +535,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts {
+
   width: 960px;
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
   padding-top: 73px;
@@ -529,9 +555,7 @@ input[type="radio"].visually-hidden {
   line-height: 45px;
   color: #000000;
 }
-.contacts{
-  display: none;
-}
+
 .contacts-form{
   width: 760px;
   margin: 0 auto;
@@ -574,9 +598,9 @@ input[type="radio"].visually-hidden {
 .contacts-user-text:hover {
   border: 2px solid #b4b9bb;
 }
-.contacts-item input:active,
-.contacts-user-text:active {
 
+.contacts-item input:focus,
+.contacts-user-text:focus {
   border: 2px solid #000000;
 }
 .contacts-item input:invalid,
@@ -627,13 +651,15 @@ input[type="radio"].visually-hidden {
   font-weight: 500;
   font-size: 36px;
   line-height: 36px;
+  text-align: center;
   color: black;
 }
 .footer-sale {
-  text-align: center;
   margin: 0;
   margin-bottom: 76px;
   line-height: 22px;
+  font-size: 16px;
+  text-align: center;
   color: #444444;
 }
 .footer-social ul {
@@ -671,35 +697,119 @@ input[type="radio"].visually-hidden {
     color: black;
     background-color: #eeeeee;
 }
-
+.main-net{
+  margin-top: 63px;
+}
 .filter {
   width: 260px;
-  height: 705px;
   margin-right: 140px;
 }
-.filter fieldset {
-  padding: 0;
-  margin: 0;
-  margin-bottom: 50px;
-  border: none;
-}
+
 .filter legend {
-  margin-bottom: 27px;
+  margin-bottom: 21px;
   font-weight: 700;
   font-size: 18px;
   line-height: 30px;
   text-align: left;
   color: #000000;
 }
-.filter fieldset:first-child {
-  margin-bottom: 35px;
-}
+
 .filter ul {
   padding: 0;
   margin: 0;
   list-style: none;
   line-height: 20px;
   color: #283136;
+}
+
+.cost {
+  margin: 0;
+  padding: 0;
+  color: #283136;
+  line-height: 22px;
+  border: none;
+}
+.cost legend{
+  margin-bottom: 59px;
+}
+.cost-range {
+  width: 260px;
+  border-radius: 5px;
+}
+.range-controls {
+  position: relative;
+
+  height: 41px;
+  margin-bottom: 13px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+
+  background-color: #f1f1f1;
+  border-radius: 5px;
+}
+.scale {
+  height: 2px;
+
+  background-color: #d7dcde;
+}
+.bar {
+  width: 70%;
+  height: 2px;
+
+  background-color: #00ca74;
+}
+.toggle {
+  position: absolute;
+  top: 31px;
+  left: 0;
+
+  width: 4px;
+  height: 4px;
+  padding: 0;
+
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.toggle-min {
+  left: 19px;
+}
+.toggle-max {
+  left: 161px;
+}
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 62px;
+  font-size: 0;
+}
+.price-controls label {
+  display: inline-block;
+
+  text-align: right;
+  font-size: 16px;
+}
+
+.price-controls input {
+  width: 60px;
+  padding: 10px;
+  margin-left: 10px;
+
+  text-align: center;
+  color: #283136;
+
+  border: none;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+}
+.filter-net{
+  margin: 0;
+  padding: 0;
+  border: none;
+  margin-bottom: 50px;
 }
 .filter-option {
   margin-bottom: 22px;
@@ -737,7 +847,7 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/checkbox-on.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-
+  opacity: 0.4;
 }
 .filter-input-radio + label::before {
   content: "";
@@ -763,19 +873,29 @@ input[type="radio"].visually-hidden {
   background-image: url("../img/radio-on.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+  opacity: 0.4;
 }
 .filter-input-radio + label:hover::before,
 .filter-input-checkbox + label:hover::before {
   opacity: 1;
 }
-
+.filter-input:disabled + label::before{
+  color: rgba(40, 49, 54, 0.3);
+  opacity: 0.1;
+}
+.filter-advantages{
+  padding: 0;
+  margin: 0;
+  border: none;
+  margin-bottom: 50px;
+}
 .filter-button {
   width: 100%;
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
   color: #000000;
-
+  border:none;
   background-color: #eeeeee;
 }
 
@@ -789,7 +909,109 @@ input[type="radio"].visually-hidden {
   background-color: #d5d5d5;
   box-shadow: inset 0 3px 0 0 rgba(0, 1, 1, 0.1);
 }
+.sorting {
+  display: flex;
+  justify-content: space-between;
+}
 
+.sorting p {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: left;
+  color: #000000;
+  margin: 0;
+  margin-bottom: 59px;
+  margin-right: 256px;
+}
+
+.sorting-option{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.sorting-pointer {
+  display: flex;
+  margin-top: 0;
+  padding-left: 29px;
+
+  list-style-type: none;
+}
+
+.sorting-pointer {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 41px;
+  padding: 0;
+  padding-top: 9px;
+  margin-left: 13px;
+}
+}
+
+.sorting-option {
+  width: 276px;
+}
+
+.sorting-option li {
+  letter-spacing: 0.2px;
+}
+
+.sorting-option a {
+  margin-right: 24px;
+}
+
+.sorting-option a:nth-child(3) {
+  margin-right: 0;
+}
+
+.sorting-option a,
+.sorting-pointer a {
+  font-size: 14px;
+  line-height: 18px;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.sorting-option a:hover,
+.sorting-pointer a:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sorting-option a:active,
+.sorting-pointer a:active,
+.sorting-option .open-option {
+  color: #000000;
+}
+
+.sorting-option .open-option,
+.sorting-option .open-option:hover,
+.sorting-option .open-option:active {
+  color: #000000;
+}
+
+.sorting-pointer .open-option,
+.sorting-pointer .open-option:hover,
+.sorting-pointer .open-option:active {
+  color: #000000;
+}
+.icon-direction {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 11px;
+  height: 10px;
+  fill: #eeeeee;
+}
+
+.icon-direction.open-option,
+.icon-direction:active svg {
+  fill: #231f20;
+}
+
+.icon-direction:hover svg {
+  fill: #a6a6a6;
+}
 .container-flex {
   display: flex;
   justify-content: space-between;
@@ -803,30 +1025,57 @@ input[type="radio"].visually-hidden {
   margin-bottom: 33px;
   list-style: none;
 }
+.catalog-item-browser{
+  opacity: 0.12;
+}
+.catalog-item:hover .catalog-item-browser{
+  opacity: 1;
+}
 .catalog-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0;
-  margin-bottom: 60px;
   padding: 0;
 }
 .catalog-list li {
   position: relative;
   width: 360px;
 }
-.add-info{
-  position: absolute;
-  top: 345px;
-  display: none;
-}
 
-.catalog-list-window {
+
+.add-info {
+  position: absolute;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   text-align: center;
   width: 360px;
   background-color: #eeeeee;
+  display: none;
+}
+.add-info h4{
+  margin: 0;
+  margin-top: 35px;
+}
+.add-info p{
+  text-align: center;
+  line-height: 18px;
+  text-transform: none;
+  color: #666666;
+  margin: 0;
+  margin-top: 25px;
+  margin-bottom: 30px;
+}
+.catalog-title {
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-top: 27px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 30px;
+    color: #000000;
+    background-color: #eeeeee;
 }
 .catalog-list-window p {
   display: block;
@@ -845,9 +1094,72 @@ input[type="radio"].visually-hidden {
   font-size: 18px;
   line-height: 30px;
   color: black;
+
 }
 .catalog-list-button{
-  margin-left: 80px;
-  margin-right: 80px;
+  width: 122px;
   margin-bottom: 43px;
+}
+.catalog-item:hover .add-info {
+  display: block;
+}
+.pagination {
+  width: 443px;
+}
+
+.pagination-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 453px;
+  padding: 0;
+  margin: 0;
+  margin-left: 39px;
+  margin-top: 27px;
+  margin-bottom: 60px;
+}
+
+.pagination-list li {
+  margin-right: 11px;
+
+  list-style-type: none;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 19px 23px 19px 21px;
+
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.13;
+  color: #000000;
+
+  background-color: #eeeeee;
+}
+
+.pagination-list .next {
+  margin-right: 0;
+  padding: 19px 79px 16px 78px;
+}
+
+.pagination a:hover {
+  background-color: #dfdfdf;
+}
+
+.pagination a:active {
+  color: rgba(0, 0, 0, 0.3);
+
+  background-color: #d5d5d5;
+  box-shadow: inset 0 3px 0 0 rgba(0,1,1,0.1);
+}
+
+.pagination .open-pagination,
+.pagination .open-pagination:hover,
+.pagination .open-pagination:active {
+  border: 1px solid #eeeeee;
+  background: none;
+}
+.location iframe{
+  width: 100%;
 }
