--- a/css/style.css
+++ b/css/style.css
@@ -447,9 +447,22 @@ input[type="radio"].visually-hidden {
   margin: 0;
   margin-top: 46px;
   margin-bottom: 80px;
+  padding-left: 30px;
   padding-bottom: 42px;
 
   border-bottom: 2px solid #eeeeee;
+}
+.clients-logo{
+  position: relative;
+  padding-right: 49px;
+}
+.clients-logo::before{
+  content: "";
+  position: absolute;
+  height: 52px;
+  right: -20px;
+  background-color: inherit;
+  border-right: 2px solid #eee;
 }
 
 .clients li {
@@ -476,7 +489,6 @@ input[type="radio"].visually-hidden {
 
 .address {
   position: absolute;
-  left: 140px;
   bottom: 54px;
   width: 319px;
   padding-top: 54px;
@@ -524,7 +536,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts {
-
+  display: none;
   width: 960px;
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
   padding-top: 73px;
@@ -647,7 +659,6 @@ input[type="radio"].visually-hidden {
   margin-bottom: 76px;
   line-height: 22px;
   font-size: 16px;
-  text-align: center;
   color: #444444;
 }
 .footer-social ul {
@@ -672,6 +683,7 @@ input[type="radio"].visually-hidden {
 .social-button:active {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d7373b;
+  opacity: 0.4;
 }
 
 
@@ -869,8 +881,8 @@ input[type="radio"].visually-hidden {
 .filter-input-checkbox + label:hover::before {
   opacity: 1;
 }
-.filter-input:disabled + label::before{
-  color: rgba(40, 49, 54, 0.3);
+.filter-input-radio:disabled + label::before,
+.filter-input-checkbox:disabled + label::before{
   opacity: 0.1;
 }
 .filter-advantages{
