--- a/css/style.css
+++ b/css/style.css
@@ -534,12 +534,60 @@ input[type="radio"].visually-hidden {
   margin-right: auto;
   margin-left: auto;
 }
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
 
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
 .contacts {
+  position: fixed;
+  left: 25%;
+  top: 25%;
+  z-index: auto;
   display: none;
   width: 960px;
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
   padding-top: 73px;
+}
+.contacts-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+.contacts-error {
+  animation: shake 0.6s;
 }
 .contacts-title {
   display: flex;
