--- a/css/style.css
+++ b/css/style.css
@@ -180,19 +180,19 @@ input[type="radio"].visually-hidden {
 .slider-item:nth-child(1) {
   background-image: url("../img/slide-1.png");
   background-repeat: no-repeat;
-  background-position: 93% 18px;
+  background-position: 93% 22px;
 }
 
 .slider-item:nth-child(2) {
   background-image: url("../img/slide-2.png");
   background-repeat: no-repeat;
-  background-position: 100% 0;
+  background-position: 100% 5px;
 }
 
 .slider-item:nth-child(3) {
   background-image: url("../img/slide-3.png");
   background-repeat: no-repeat;
-  background-position: 100% 20px;
+  background-position: 100% 25px;
 }
 
 #product-1:checked ~ .slider-list .slider-item:nth-child(1) {
@@ -222,7 +222,9 @@ input[type="radio"].visually-hidden {
   border: 2px solid #c1c1c1;
   border-radius: 50%;
 }
-
+.slider-item-button{
+  width: 162px;
+}
 .slider-item h3 {
   max-width: 600px;
   margin: 0;
@@ -735,9 +737,10 @@ input[type="radio"].visually-hidden {
 .social-button:active {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d7373b;
-  opacity: 0.4;
 }
-
+.social-button svg:active {
+  opacity: 0.3;
+}
 
 .page-title {
   margin-top: 0;
